Fixing code style